<resources>
    <string name="app_name">IndigoX</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_home_page">HomePageActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_start_scanner_page">StartScannerActivity</string>
    <string name="title_activity_add_reading">AddReadingActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_profile_fragment">Profile</string>
    <string name="link_sampler_fragment">Sampler</string>
    <string name="geo_weather_fragment">GeoWeather</string>
    <string name="add_reading_data_fragment">Readings</string>
    <string name="title_activity_view_reading">ViewReadingActivity</string>
    <string name="title_activity_view_scan_codes">ViewScanCodesActivity</string>
    <string name="boat_name">Boat Name</string>
    <string name="user_email">Email/Username</string>
    <string name="user_full_name">Name</string>
    <string name="next_page">Next</string>
    <string name="previous_page">Previous</string>
    <string name="save_reading">Save</string>
    <string name="in_latitude">Latitude</string>
    <string name="in_longitude">Longitude</string>
    <string name="in_elevation">Elevation</string>
    <string name="in_bar_press">Bar Press</string>
    <string name="in_cloud_cover">Cloud Cover</string>
    <string name="in_wave_height">Wave Height</string>
    <string name="in_wave_direction">Wave Direction</string>
    <string name="in_wind_speed">Wind Speed</string>
    <string name="select_sampler">Select Sampler</string>
    <string name="title_activity_gpslocation">GPSLocationActivity</string>
</resources>
