<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             tools:context="com.example.nirav.indigox.Fragments.GeoWeatherFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="550dp"
            android:paddingTop="80dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:orientation="vertical">
        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbarSize="10dp"
                android:scrollbarThumbVertical="@drawable/geo_custom_scroll_style">
        <LinearLayout
                android:id="@+id/geoweather_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/round_corners_view">
            <LinearLayout
                    android:id="@+id/geoweather_form_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingRight="20dp"
                    android:paddingLeft="10dp">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Geo Location"
                        android:layout_weight="1"
                        android:textColor="@color/hintColorIndigo"
                        android:textStyle="bold"
                        android:textSize="20sp"/>

                <Button
                        android:id="@+id/boat_location_button"
                        android:onClick="getGPSLocation"
                        style="?android:textAppearanceSmall"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:gravity="right"
                        android:background="@drawable/icons8_location"/>

            </LinearLayout>


            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#1976D2">

                <AutoCompleteTextView
                        android:id="@+id/geo_latitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/in_latitude"
                        android:textColor="#1976D2"
                        android:textColorHint="@color/hintColorIndigo"
                        android:inputType="numberDecimal|numberSigned"
                        android:maxLines="1"
                        android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#1976D2">

                <EditText
                        android:id="@+id/geo_longitude"
                        android:textColor="#1976D2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal|numberSigned"
                        android:hint="@string/in_longitude"
                        android:textColorHint="@color/hintColorIndigo"
                        android:maxLines="1"
                        android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#1976D2">

                <EditText
                        android:id="@+id/geo_elevation"
                        android:textColor="#1976D2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal|numberSigned"
                        android:hint="@string/in_elevation"
                        android:textColorHint="@color/hintColorIndigo"
                        android:maxLines="1"
                        android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>
            <!--View android:paddingTop="40dp"
                  android:paddingBottom="40dp"
                  style="@style/Divider"/-->

            <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/blue_separator_md"
                    android:paddingBottom="30dp"
                    android:paddingTop="30dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Weather"
                    android:textColor="@color/hintColorIndigo"
                    android:textStyle="bold"
                    android:paddingLeft="10dp"
                    android:textSize="20sp"/>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#1976D2">

                <EditText
                        android:id="@+id/weather_bar_press"
                        android:textColor="#1976D2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/in_bar_press"
                        android:textColorHint="@color/hintColorIndigo"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#1976D2">

                <EditText
                        android:id="@+id/weather_cloud_cover"
                        android:textColor="#1976D2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/in_cloud_cover"
                        android:textColorHint="@color/hintColorIndigo"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#1976D2">

                <EditText
                        android:id="@+id/weather_wave_height"
                        android:textColor="#1976D2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/in_wave_height"
                        android:textColorHint="@color/hintColorIndigo"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#1976D2">

                <EditText
                        android:id="@+id/weather_wave_direction"
                        android:textColor="#1976D2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/in_wave_direction"
                        android:textColorHint="@color/hintColorIndigo"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#1976D2">

                <EditText
                        android:id="@+id/weather_wind"
                        android:textColor="#1976D2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/in_wind_speed"
                        android:textColorHint="@color/hintColorIndigo"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>
    </LinearLayout>


        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/geoweather_form"
                android:paddingBottom="25dp"
                android:layout_gravity="bottom">
            <Button
                    android:id="@+id/previous_profile_page"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintRight_toLeftOf="@+id/next_sampler_page"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:text="@string/previous_page"
                    android:background="@drawable/round_button_opaque"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    app:layout_constraintVertical_bias="1.0"/>

            <Button
                    android:id="@+id/next_sampler_page"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintRight_toLeftOf="parent"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintLeft_toRightOf="@+id/previous_profile_page"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:text="@string/next_page"
                    android:background="@drawable/round_button_opaque"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    app:layout_constraintVertical_bias="1.0"
                    android:layout_marginRight="0dp"
                    android:layout_marginLeft="128dp"/>

        </android.support.constraint.ConstraintLayout>



</FrameLayout>
