<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             tools:context="com.example.nirav.indigox.Fragments.AddSamplerReadingsFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="80dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:orientation="vertical">
        <LinearLayout
                android:id="@+id/add_sampler_reading_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/round_corners_view">

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#1976D2">

                <AutoCompleteTextView
                        android:id="@+id/reading1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Reading1"
                        android:inputType="text|textAutoCorrect"
                        android:maxLines="1"
                        android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#1976D2">

                <EditText
                        android:id="@+id/reading2"
                        android:textColor="#1976D2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:hint="Reading2"
                        android:textColorHint="@color/hintColorIndigo"
                        android:maxLines="1"
                        android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#1976D2">

                <EditText
                        android:id="@+id/reading3"
                        android:textColor="#1976D2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Reading3"
                        android:textColorHint="@color/hintColorIndigo"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#1976D2">

                <EditText
                        android:id="@+id/reading4"
                        android:textColor="#1976D2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Reading4"
                        android:textColorHint="@color/hintColorIndigo"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#1976D2">

                <EditText
                        android:id="@+id/reading5"
                        android:textColor="#1976D2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Reading5"
                        android:textColorHint="@color/hintColorIndigo"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/add_sampler_reading_form"
                android:paddingTop="30dp">
            <Button
                    android:id="@+id/previous_sampler_page"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintRight_toLeftOf="@+id/save_reading_page"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:text="@string/previous_page"
                    android:background="@drawable/round_button_opaque"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    app:layout_constraintVertical_bias="1.0"/>

            <Button
                    android:id="@+id/save_reading_page"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintRight_toLeftOf="parent"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintLeft_toRightOf="@+id/previous_sampler_page"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:text="@string/save_reading"
                    android:background="@drawable/round_button_opaque"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    app:layout_constraintVertical_bias="1.0"
                    android:layout_marginRight="0dp"
                    android:layout_marginLeft="128dp"/>
        </android.support.constraint.ConstraintLayout>


    </LinearLayout>
    <!--/ScrollView-->

</FrameLayout>
